<resources>
    <string name="app_name">WeatherMapProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_not_found">Username tidak ditemukan</string>
    <string name="wrong_pin">PIN salah</string>
    <string name="registrasi">Registrasi</string>
    <string name="registrasi_sukses">Pendaftaran Berhasil</string>
    <string name="cuaca">Cuaca</string>
    <string name="profil">Profil</string>
    <string name="profil_updated">Berhasil memperbarui profil Anda</string>
    <string name="suretoexit">Apakah anda yakin ingin keluar akun?</string>
    <string name="exit">Keluar</string>
    <string name="cancel">Batal</string>
    <string name="masuk">Masuk</string>
    <string name="username">Username</string>
    <string name="pin">PIN</string>
    <string name="verifyPin">Ketik Ulang PIN</string>
    <string name="daftar">Daftar</string>
    <string name="lupa_pin_anda">Lupa PIN Anda?</string>
    <string name="location_permission">location Permission</string>
    <string name="weathermapproject_requires_access_to_your_current_location_please_enable_location_manually_via_app_settings">WeatherMapProject requires access to your current location. Please enable location manually via app settings.</string>
    <string name="continues">Continue</string>
    <string name="reject">Reject</string>
    <string name="nama">Nama</string>
    <string name="e_mail">E-mail</string>
    <string name="keluar">Keluar</string>
    <string name="perbarui">Perbarui</string>
    <string name="city_name">City Name</string>
    <string name="lattitude">Lattitude</string>
    <string name="longitude">Longitude</string>
    <string name="save">Simpan</string>
    <string name="tambahkan_kota">Tambahkan Kota</string>
    <string name="succesadded">Successfully Added</string>
    <string name="username_already_used">Username %s telah digunakan</string>
    <string name="find_city">Cari Kota</string>
    <string name="reset_pin">Ganti PIN</string>
    <string name="currentPin">PIN saat ini</string>
    <string name="pinNew">PIN Baru</string>
    <string name="pin_updated">PIN Berhasil diperbarui</string>
    <string name="temp">Temperature</string>
    <string name="dewPoint">DewPoint</string>
    <string name="humidity">Humidity</string>
    <string name="grafik_temperature_dewpoint_dan_humidity">Grafik Temperature, DewPoint dan Humidity</string>
</resources>