<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardBackground"
    tools:context=".ui.activity.ActivitySignIn">

    <ImageView
        android:layout_width="@dimen/image_size_extra_large"
        android:layout_height="@dimen/image_size_extra_large"
        android:layout_above="@id/bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/x60dp"
        android:src="@drawable/icons8_weather" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottom"
        style="@style/cardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="@dimen/card_corner"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x20dp"
            android:orientation="vertical"
            android:padding="@dimen/x30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                style="@style/tilStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x20dp"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/tilStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signIn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/x20dp"
                android:text="@string/masuk" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUp"
                style="@style/buttonStyle"
                app:backgroundTint="@color/cardBackground"
                android:textColor="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/daftar" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x8dp"
                android:text="@string/lupa_pin_anda" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>