<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/cardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="center"
                android:background="?colorPrimary"
                android:gravity="center"
                android:text="@string/location_permission"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/padding_parent">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="@dimen/image_size_large"
                    android:src="@drawable/icons8_map"
                    android:layout_height="@dimen/image_size_large" />

                <TextView
                    android:id="@+id/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/padding_parent"
                    android:layout_marginBottom="@dimen/padding_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/weathermapproject_requires_access_to_your_current_location_please_enable_location_manually_via_app_settings" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/done"
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginStart="@dimen/x3dp"
                    android:layout_marginEnd="@dimen/x3dp"
                    android:text="@string/continues" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel"
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginStart="@dimen/x3dp"
                    android:layout_marginEnd="@dimen/x3dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/reject"
                    android:textColor="@color/red"
                    app:rippleColor="@color/red" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>