<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.fragment.weather.FragmentWeather">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchTil"
                style="@style/actStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x16dp"
                android:hint="@string/find_city"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/anim_loading"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/icon"
                android:layout_width="@dimen/image_size_extra_large"
                android:layout_height="@dimen/image_size_extra_large"
                android:layout_marginTop="@dimen/x70dp"
                android:layout_marginBottom="@dimen/x8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchTil"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />

            <com.acxdev.shimmer.widget.ShimmerText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x60dp"
                android:layout_marginEnd="@dimen/x60dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon" />

            <com.acxdev.shimmer.widget.ShimmerText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x60dp"
                android:layout_marginTop="@dimen/x16dp"
                android:layout_marginEnd="@dimen/x60dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="@dimen/text_extra_large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc" />

            <com.acxdev.shimmer.widget.ShimmerText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x60dp"
                android:layout_marginTop="@dimen/x4dp"
                android:layout_marginEnd="@dimen/x60dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <com.acxdev.shimmer.widget.ShimmerText
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x60dp"
                android:layout_marginTop="@dimen/x4dp"
                android:layout_marginEnd="@dimen/x60dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="@dimen/text_header"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <View
                android:layout_width="0.7dp"
                android:layout_height="@dimen/x14dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/pressure"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@+id/pressure" />

            <com.acxdev.shimmer.widget.ShimmerText
                android:id="@+id/pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x60dp"
                android:layout_marginTop="@dimen/x8dp"
                android:layout_marginEnd="@dimen/x8dp"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temp" />

            <com.acxdev.shimmer.widget.ShimmerText
                android:id="@+id/humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x8dp"
                android:layout_marginTop="@dimen/x8dp"
                android:layout_marginEnd="@dimen/x60dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/temp" />

            <com.acxdev.shimmer.widget.ShimmerRecycler
                android:id="@+id/weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:padding="@dimen/x16dp"
                app:child="3"
                app:grid="4"
                app:layout="@layout/row_weather"
                app:layout_constraintTop_toBottomOf="@id/humidity"
                app:layout_manager="grid" />

            <com.google.android.material.card.MaterialCardView
                style="@style/cardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x16dp"
                app:layout_constraintTop_toBottomOf="@+id/weather">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/x10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/grafik_temperature_dewpoint_dan_humidity"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold" />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />

                    <LinearLayout
                        android:id="@+id/checkBoxLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/tempCheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/green"
                            android:checked="true"
                            android:paddingStart="@dimen/x0dp"
                            android:paddingEnd="@dimen/x4dp"
                            android:text="@string/temp" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/dewPointCheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/blue"
                            android:checked="true"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/x4dp"
                            android:text="@string/dewPoint" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/humidityCheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/yellow"
                            android:checked="true"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/x4dp"
                            android:text="@string/humidity" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>